more xref, use link: instead of direct http

--- a/netbeans.apache.org/src/content/about/history.adoc
+++ b/netbeans.apache.org/src/content/about/history.adoc
@@ -25,11 +25,12 @@
 :toc: left
 :toc-title:
 :icons: font
+include::../inc/database.adoc[]
 
 == The student project
 
 NetBeans started as a student project (originally called Xelfi) in the Czech
-Republic, in 1996. The goal was to write a link:https://en.wikipedia.org/wiki/Delphi_%28IDE%29[Delphi]-like Java IDE (Integrated
+Republic, in 1996. The goal was to write a link:{wikipedia}Delphi_%28IDE%29[Delphi]-like Java IDE (Integrated
 Development Environment) in Java. 
 
 Xelfi was the first Java IDE written in Java, with its first pre-releases in
@@ -171,7 +172,7 @@ smarter and faster editor, together with the integration of external NetBeans
 products into one IDE.
 
 In August, 2010, NetBeans 6.9.1 was released with link:https://www.osgi.org/[OSGi support],
-bundling the link:http://felix.apache.org/[Apache Felix OSGi container]. It also
+bundling the link:https://felix.apache.org/[Apache Felix OSGi container]. It also
 supported link:https://openjfx.io/[JavaFX 1.3.1], was Java EE 6 compliant and
 included support for PHP, Ruby, C and C++ and many other features.
 
@@ -186,7 +187,7 @@ NetBeans IDE as the official IDE for the Java Platform.
 NetBeans 7 was released together with JDK 7, providing editor tools for working
 with new JDK 7 language constructs, together with support for JavaFX 2.0.
 
-NetBeans 7.1 introduced link:http://wiki.netbeans.org/Netigso[Netigso] from (Net and 
+NetBeans 7.1 introduced xref:../wiki/OSGiAndNetBeans.adoc[Netigso] from (Net and 
 a reversed OSGi). This was reused in Oracle's JDeveloper as well,
 with link:http://wiki.apidesign.org/wiki/JDeveloper[important performance enhancements].
 
@@ -209,7 +210,7 @@ improving node.js, Oracle JET and PHP 7 support.
 == The Apache Incubator era
 
 In 2016 Oracle donated the source code of NetBeans to the link:https://www.apache.org/[Apache Software Foundation],
-and started as a podling in the link:http://incubator.apache.org/[Apache Incubator Project].
+and started as a podling in the link:https://incubator.apache.org/[Apache Incubator Project].
 
 During approximately two years and a half many volunteers joined the podling, and work started to
 adapt the codebase to comply with the Apache Software Foundation Guidelines. 
