--- a/netbeans.apache.org/src/content/about/oracle-transition.adoc
+++ b/netbeans.apache.org/src/content/about/oracle-transition.adoc
@@ -36,7 +36,7 @@ In the meanwhile we have graduated from the link:https://incubator.apache.org/[A
 
 As of March the 6th, 2021, we'll be standing on our own feet, and all the Apache NetBeans Project source and convenience binaries will be hosted by the link:https://www.apache.org/dev/infrastructure.html[Apache Infra Team].
 
-This means that we won't be able to host any binaries that are not produced by the Apache Software Foundation, as stated in the link:https://infra.apache.org/release-distribution[ASF Infra Release Distribution Policy] and in the link:http://www.apache.org/legal/release-policy.html#policy[Apache Release Policy].
+This means that we won't be able to host any binaries that are not produced by the Apache Software Foundation, as stated in the link:https://infra.apache.org/release-distribution[ASF Infra Release Distribution Policy] and in the link:https://www.apache.org/legal/release-policy.html#policy[Apache Release Policy].
 
 == Oracle's binaries and artifacts
 
@@ -44,7 +44,7 @@ In case you still need to access Oracle binaries or artifacts, some individuals 
 
 === Maven repository
 
-Jaroslav Tulach is hosting a Maven repository with all previous Oracle binaries at https://netbeans.apidesign.org/maven2/. You can use this repository by adding the following to your `pom.xml`:
+Jaroslav Tulach is hosting a Maven repository with all previous Oracle binaries at link:https://netbeans.apidesign.org/maven2/[https://netbeans.apidesign.org/maven2/]. You can use this repository by adding the following to your `pom.xml`:
 
 [code, xml]
 ----
