--- a/netbeans.apache.org/src/content/community/events.adoc
+++ b/netbeans.apache.org/src/content/community/events.adoc
@@ -35,7 +35,7 @@ An "Apache NetBeans Day" is a class of event that happens regularly, with a clea
 
 *Note:* From an Apache point of view what's important (besides trademarks being respected) is that all organizations are treated fairly and that it's clear that they cannot "own" the event or project. We need to make sure we don't favor commercial entities or organizations over others is a strong requirement of the ASF's 501c(3) status, so we're very picky about that. And besides this legal requirement, it's what makes the ASF a unique place where companies which might compete in the market can collaborate in a fair way, due to our very neutral status.
 
-For publicizing NetBeans events, the Apache News posts at https://blogs.apache.org/foundation/ can mention those events, best is to contact press@apache.org for that. Apache has an Event Listing (https://events.apache.org/), that we'd also like to make use of.
+For publicizing NetBeans events, the Apache News posts at link:https://blogs.apache.org/foundation/[https://blogs.apache.org/foundation/] can mention those events, best is to contact press@apache.org for that. Apache has an Event Listing (link:https://events.apache.org/[https://events.apache.org/]), that we'd also like to make use of.
 
 == Past NetBeans related events
 - link:https://www.youtube.com/watch?v=ivPjmsSS8iU/[Dawscon 2021 - Everyday coding in NetBeans]
@@ -47,14 +47,14 @@ For publicizing NetBeans events, the Apache News posts at https://blogs.apache.o
 The Apache Software Foundation provides different resources for events and conferences:
 
 - link:https://www.apache.org/foundation/marks/events[Apache Event Branding Policy Overview].
-- link:http://community.apache.org/speakers/slides.html[Apache related slides], see also more link:http://community.apache.org/speakers/index.html[Speaker Support Materials] 
+- link:https://community.apache.org/speakers/slides.html[Apache related slides], see also more link:https://community.apache.org/speakers/index.html[Speaker Support Materials] 
 and link:https://community.apache.org/speakers/[Speaker information], including an Apache press kit.
 - The link:https://www.youtube.com/user/TheApacheFoundation/[ASF YouTube Channel] can be used to upload videos.
-- You can list yourself as a link:http://community.apache.org/speakers/speakers.html[potential speaker].
-- link:http://community.apache.org/calendars/conferences.html[Events calendar].
-- link:https://www.apache.org/events/meetups.html[Upcoming Apache-Related meetups].
+- You can list yourself as a link:https://community.apache.org/speakers/speakers.html[potential speaker].
+- link:https://community.apache.org/calendars/conferences.html[Events calendar].
+- link:http://www.apache.org/events/meetups.html[Upcoming Apache-Related meetups].
 
-Be sure to also check the Apache Software Foundation link:http://community.apache.org/[Apache Community Development] page.
+Be sure to also check the Apache Software Foundation link:https://community.apache.org/[Apache Community Development] page.
 
 
 
