--- a/netbeans.apache.org/src/content/community/nekobean.adoc
+++ b/netbeans.apache.org/src/content/community/nekobean.adoc
@@ -99,5 +99,5 @@ If your use falls under any of the following, you can relax credit and use image
 * In the case of personal use, you can use images without credit if you use them without modifying and editing them. 
 (In this case, modifying and editing don't mean scaling them and modifying their backgrounds. i.e. You can scale them and modify their backgrounds.)
 
-If you use images without credit, please add the link of this page(https://netbeans.apache.org/community/nekobean.html) if possible.
+If you use images without credit, please add the link of this page(xref:nekobean.adoc[https://netbeans.apache.org/community/nekobean.html]) if possible.
 
