--- a/netbeans.apache.org/src/content/community/nekobean_ja.adoc
+++ b/netbeans.apache.org/src/content/community/nekobean_ja.adoc
@@ -99,5 +99,5 @@ link:https://creativecommons.org/licenses/by-sa/2.1/jp/[Creative Commons 表示-
 * 個人で使用する場合で、画像を変更・編集なしで使用する場合、 クレジット表示なしで使用することができます。
 (ここで言う変更、編集には画像の拡大・縮小・背景画像変更は含みません)
 
-クレジット表示をされない場合、余裕があればねこび〜んのページ (https://netbeans.apache.org/community/nekobean_ja.html) へのリンクを追加してください。
+クレジット表示をされない場合、余裕があればねこび〜んのページ (xref:nekobean_ja.adoc[https://netbeans.apache.org/community/nekobean_ja.html]) へのリンクを追加してください。
 
