--- a/netbeans.apache.org/src/content/download/nb100/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb100/index.adoc
@@ -83,10 +83,10 @@ Note: When rendered into HTML, the images will automatically be wrapped around '
 
 JDK 11 support has been enhanced in the following ways:
 
-- Integration with the link:https://hg.netbeans.org/main/nb-java-x[nb-javac] project, adding support for JDK 11.
+- Integration with the link:https://github.com/oracle/nb-javac[nb-javac] project, adding support for JDK 11.
 - Removed the CORBA modules.
-- Support for link:http://openjdk.java.net/jeps/309[JEP 309, Dynamic Class-File Constants].
-- Support for link:http://openjdk.java.net/jeps/323[JEP 323, Local-Variable Syntax for Lambda Parameters].
+- Support for link:https://openjdk.org/jeps/309[JEP 309, Dynamic Class-File Constants].
+- Support for link:https://openjdk.org/jeps/323[JEP 323, Local-Variable Syntax for Lambda Parameters].
 - Support for link:https://cwiki.apache.org/confluence/display/NETBEANS/LVTI+Support+for+Lamdba+Parameters+in+NetBeans+10[LVTI Support for Lamdba Parameters]
 
 image:convert-to-var.png[New Hint to convert variable type to 'var' for lambda parameters(JDK 11 and above)]
