--- a/netbeans.apache.org/src/content/download/nb113/nb113.adoc
+++ b/netbeans.apache.org/src/content/download/nb113/nb113.adoc
@@ -62,7 +62,7 @@ link:https://archive.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3
 
 - Javadoc for this release is available at https://bits.netbeans.org/11.3/javadoc
 
-TIP: The installers will NOT run under JDK 14 because usage is made of the Pack200 Tools and API, for packing and unpacking, which is removed in JDK 14, see link:https://openjdk.java.net/jeps/367[JEP 367]. 
+TIP: The installers will NOT run under JDK 14 because usage is made of the Pack200 Tools and API, for packing and unpacking, which is removed in JDK 14, see link:https://openjdk.org/jeps/367[JEP 367]. 
 
 ////
 NOTE: Using https below is highly recommended.
