--- a/netbeans.apache.org/src/content/download/nb120/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.adoc
@@ -57,14 +57,14 @@ TIP: In these scenarios, make sure to uninstall the NetBeans "nb-javac" fork, if
 
 ==== Java 14
 
-- link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
+- link:https://openjdk.org/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
 
 [.feature]
 --
 image::record-keyword.png[role="left", link="record-keyword.png"]
 -- 
 
-- link:https://openjdk.java.net/jeps/305[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
+- link:https://openjdk.org/jeps/305[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
 
 [.feature]
 --
@@ -73,7 +73,7 @@ image::ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"
 
 ==== Java 13
 
-- link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- Java editor hint has been introduced for converting to/from text blocks.
+- link:https://openjdk.org/jeps/355[JEP 355]: Text Blocks (Preview) -- Java editor hint has been introduced for converting to/from text blocks.
 
 [.feature]
 --
@@ -87,14 +87,14 @@ image::TextBlockToString.gif[role="left", link="TextBlockToString.gif"]
 
 ==== Java 12
 
-- link:https://openjdk.java.net/jeps/325[JEP 325]: Switch Expressions (Preview) – code completion for JEP-325 preview feature for multiple case labels, as shown below.
+- link:https://openjdk.org/jeps/325[JEP 325]: Switch Expressions (Preview) – code completion for JEP-325 preview feature for multiple case labels, as shown below.
 
 [.feature]
 --
 image::code-completion-multiple-case-2.png[role="left", link="code-completion-multiple-case-2.png"]
 -- 
 
-TIP: link:https://openjdk.java.net/jeps/12[JEP 12], introduced in JDK 12, provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
+TIP: link:https://openjdk.org/jeps/12[JEP 12], introduced in JDK 12, provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
 
 Preview features can only be used if the Java compiler's `--enable-preview` flag is set, as shown below for Maven. 
 
@@ -128,7 +128,7 @@ run.jvmArgs(['--enable-preview'])
 
 ==== Java 11
  
-- link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
+- link:https://openjdk.org/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
 
 === JavaFX
 
