--- a/netbeans.apache.org/src/content/download/nb121/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb121/index.adoc
@@ -48,10 +48,10 @@ The full list of pull requests integrated in the 12.1 timeframe link:https://git
 
 == Java Editor
 
-- nb-javac for Java 14 usage when running NetBeans on earlier JDK releases (https://github.com/apache/netbeans/pull/2277)
-- New file template for creating Records (https://github.com/apache/netbeans/pull/2183)
-- Better support for code completion for Records (https://github.com/apache/netbeans/pull/2222)
-- Refactoring support for Records (https://github.com/apache/netbeans/pull/2164)
+- nb-javac for Java 14 usage when running NetBeans on earlier JDK releases (link:https://github.com/apache/netbeans/pull/2277[https://github.com/apache/netbeans/pull/2277])
+- New file template for creating Records (link:https://github.com/apache/netbeans/pull/2183[https://github.com/apache/netbeans/pull/2183])
+- Better support for code completion for Records (link:https://github.com/apache/netbeans/pull/2222[https://github.com/apache/netbeans/pull/2222])
+- Refactoring support for Records (link:https://github.com/apache/netbeans/pull/2164[https://github.com/apache/netbeans/pull/2164])
 
 === C/C++
 
@@ -62,7 +62,7 @@ Rudimentary C/C++ feature integration, which does not have as many features as t
 - Code completion and other editing support is through the Language Server Protocol, using the ccls language server, which the users need to provide themselves;
 -- A *very* rudimentary debugger using gdb (based on the Ant debugger, and gdb interface from CND).
 
-More details: https://github.com/apache/netbeans/pull/2234
+More details: link:https://github.com/apache/netbeans/pull/2234[https://github.com/apache/netbeans/pull/2234]
 
 === Gradle
 
@@ -71,19 +71,19 @@ More details: https://github.com/apache/netbeans/pull/2234
 
 === PHP
 
-- Add new actions for Composer (https://github.com/apache/netbeans/pull/2173)
-- Show `false` and `true` instead of `0` and `1` as boolean values in the Variables window of the debugger (https://github.com/apache/netbeans/pull/2178)
-- Improve/Fix code analysis features(e.g.https://github.com/apache/netbeans/pull/2246, https://github.com/apache/netbeans/pull/2249)
+- Add new actions for Composer (link:https://github.com/apache/netbeans/pull/2173[https://github.com/apache/netbeans/pull/2173])
+- Show `false` and `true` instead of `0` and `1` as boolean values in the Variables window of the debugger (link:https://github.com/apache/netbeans/pull/2178[https://github.com/apache/netbeans/pull/2178])
+- Improve/Fix code analysis features(e.g.link:https://github.com/apache/netbeans/pull/2246[https://github.com/apache/netbeans/pull/2246], link:https://github.com/apache/netbeans/pull/2249[https://github.com/apache/netbeans/pull/2249])
 
 == HTML
 
-- Update the validator.jar (https://github.com/apache/netbeans/pull/2217)
-- Enable the code template completion (https://github.com/apache/netbeans/pull/2253)
-- Code completion and syntax highlighting for <script type="module"></script> (https://github.com/apache/netbeans/pull/2184)
+- Update the validator.jar (link:https://github.com/apache/netbeans/pull/2217[https://github.com/apache/netbeans/pull/2217])
+- Enable the code template completion (link:https://github.com/apache/netbeans/pull/2253[https://github.com/apache/netbeans/pull/2253])
+- Code completion and syntax highlighting for <script type="module"></script> (link:https://github.com/apache/netbeans/pull/2184[https://github.com/apache/netbeans/pull/2184])
 
 === CSS
 
-- Add formatting options (https://github.com/apache/netbeans/pull/2257) only "Tabs And Indents"
+- Add formatting options (link:https://github.com/apache/netbeans/pull/2257[https://github.com/apache/netbeans/pull/2257]) only "Tabs And Indents"
 
 === Miscellaneous
 
