--- a/netbeans.apache.org/src/content/download/nb121/nb121.adoc
+++ b/netbeans.apache.org/src/content/download/nb121/nb121.adoc
@@ -104,7 +104,7 @@ Apache NetBeans 12.1 runs on JDK LTS releases 8 and 11, as well as on JDK 14, i.
 To build Apache NetBeans 12.1 from source you need:
 
 . A distribution of OpenJDK 8 or 11.
-. Apache Ant 1.10 or greater (https://ant.apache.org).
+. Apache Ant 1.10 or greater (link:https://ant.apache.org[https://ant.apache.org]).
 
 Once you have everything installed then:
 
