--- a/netbeans.apache.org/src/content/download/nb124/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb124/index.adoc
@@ -43,16 +43,16 @@ The full list of pull requests integrated in the 12.4 timeframe link:https://git
 
 === Java 16 Support
  - Java 16, the latest release of Java at the time of Apache NetBeans 12.4, is supported, including nb-javac which has been upgraded to support Java 16. 
-nbjavac-upgrade-to-jdk-16: https://github.com/apache/netbeans/pull/2899
- - Replace usage of JDK internal, or in-house Base64 codecs by java.util.Base64: https://github.com/apache/netbeans/pull/2874
+nbjavac-upgrade-to-jdk-16: link:https://github.com/apache/netbeans/pull/2899[https://github.com/apache/netbeans/pull/2899]
+ - Replace usage of JDK internal, or in-house Base64 codecs by java.util.Base64: link:https://github.com/apache/netbeans/pull/2874[https://github.com/apache/netbeans/pull/2874]
 
 === Install OpenJDK 
 Go to Tools | Java Platform, click Add Platform, and then "Remote Universal OpenJDK Service", and you'll be able to download and register OpenJDK distros of your choice.
-https://github.com/apache/netbeans/pull/2854
-https://github.com/apache/netbeans/pull/2896
+link:https://github.com/apache/netbeans/pull/2854[https://github.com/apache/netbeans/pull/2854]
+link:https://github.com/apache/netbeans/pull/2896[https://github.com/apache/netbeans/pull/2896]
 
 === Jakarta EE
-Jakarta EE 9 Project Support: https://github.com/apache/netbeans/pull/2684
+Jakarta EE 9 Project Support: link:https://github.com/apache/netbeans/pull/2684[https://github.com/apache/netbeans/pull/2684]
 
 === Micronaut
 In the New Project dialog, choose "Java with Maven" and then "Micronaut Project", to get started with Micronaut development in Apache NetBeans 12.4.
@@ -62,48 +62,48 @@ In the New Project dialog, choose "Java with Maven" and then "Micronaut Project"
  - HyperlinkProvider for Micronaut yaml config files implemented
  - WhereUsed RefactoringPlugin for Micronaut yaml config files implemented
  
-https://github.com/apache/netbeans/pull/2812
+link:https://github.com/apache/netbeans/pull/2812[https://github.com/apache/netbeans/pull/2812]
 
 === Payara
-Automatically detect & list Payara Platform version in the server registration panel: https://github.com/apache/netbeans/pull/2409
+Automatically detect & list Payara Platform version in the server registration panel: link:https://github.com/apache/netbeans/pull/2409[https://github.com/apache/netbeans/pull/2409]
 
 === Maven
- - Support for VM/app argument injection to (Maven) run and debug project actions: https://github.com/apache/netbeans/pull/2731
- - Avoid NPE when executing some Maven projects: https://github.com/apache/netbeans/pull/2833
+ - Support for VM/app argument injection to (Maven) run and debug project actions: link:https://github.com/apache/netbeans/pull/2731[https://github.com/apache/netbeans/pull/2731]
+ - Avoid NPE when executing some Maven projects: link:https://github.com/apache/netbeans/pull/2833[https://github.com/apache/netbeans/pull/2833]
 
 === Gradle
- - Upgrade Gradle Tooling to 7.0: https://github.com/apache/netbeans/pull/2861
- - Support Gradle Source Groups from Alien Projects: https://github.com/apache/netbeans/pull/2779
- - Fix NPE on Gradle settings when no network connection: https://github.com/apache/netbeans/pull/2879
- - Upgradle to JaCoCo 0.8.6 for Gradle Code Coverage: https://github.com/apache/netbeans/pull/2893
- - Clear NB Non-Project cache when we have more info from Gradle: https://github.com/apache/netbeans/pull/2837
+ - Upgrade Gradle Tooling to 7.0: link:https://github.com/apache/netbeans/pull/2861[https://github.com/apache/netbeans/pull/2861]
+ - Support Gradle Source Groups from Alien Projects: link:https://github.com/apache/netbeans/pull/2779[https://github.com/apache/netbeans/pull/2779]
+ - Fix NPE on Gradle settings when no network connection: link:https://github.com/apache/netbeans/pull/2879[https://github.com/apache/netbeans/pull/2879]
+ - Upgradle to JaCoCo 0.8.6 for Gradle Code Coverage: link:https://github.com/apache/netbeans/pull/2893[https://github.com/apache/netbeans/pull/2893]
+ - Clear NB Non-Project cache when we have more info from Gradle: link:https://github.com/apache/netbeans/pull/2837[https://github.com/apache/netbeans/pull/2837]
 
 === Ant
- - Support Ant Freeform projects with source Level 9+: https://github.com/apache/netbeans/pull/2794
- - Update nbbuild freeform project to open without errors: https://github.com/apache/netbeans/pull/2798
- - Improve Java/Jakarta EE with Ant based projects: https://github.com/apache/netbeans/pull/2491
+ - Support Ant Freeform projects with source Level 9+: link:https://github.com/apache/netbeans/pull/2794[https://github.com/apache/netbeans/pull/2794]
+ - Update nbbuild freeform project to open without errors: link:https://github.com/apache/netbeans/pull/2798[https://github.com/apache/netbeans/pull/2798]
+ - Improve Java/Jakarta EE with Ant based projects: link:https://github.com/apache/netbeans/pull/2491[https://github.com/apache/netbeans/pull/2491]
 
 == Web Frontend Enhancements
 
 === PHP Enhancements
- - PHP 8.0 Support: Named Arguments: https://github.com/apache/netbeans/pull/2894
- - Prevent generating abstract methods with PHPDoc return array type: https://github.com/apache/netbeans/pull/2886
- - Improved Fix Uses dialog: https://github.com/apache/netbeans/pull/2755
- - Fixed compatibility with Phing 3: https://github.com/apache/netbeans/pull/2776
- - Show new configuration files for PHP-CS-Fixer 3 in Important files : https://github.com/apache/netbeans/pull/2880
+ - PHP 8.0 Support: Named Arguments: link:https://github.com/apache/netbeans/pull/2894[https://github.com/apache/netbeans/pull/2894]
+ - Prevent generating abstract methods with PHPDoc return array type: link:https://github.com/apache/netbeans/pull/2886[https://github.com/apache/netbeans/pull/2886]
+ - Improved Fix Uses dialog: link:https://github.com/apache/netbeans/pull/2755[https://github.com/apache/netbeans/pull/2755]
+ - Fixed compatibility with Phing 3: link:https://github.com/apache/netbeans/pull/2776[https://github.com/apache/netbeans/pull/2776]
+ - Show new configuration files for PHP-CS-Fixer 3 in Important files : link:https://github.com/apache/netbeans/pull/2880[https://github.com/apache/netbeans/pull/2880]
 
 === HTML
- - Improved code completion for HTML forms: https://github.com/apache/netbeans/pull/2739
+ - Improved code completion for HTML forms: link:https://github.com/apache/netbeans/pull/2739[https://github.com/apache/netbeans/pull/2739]
 
 == Miscellaneous Enhancements
 
 === Markdown
- - Files with extension ".md" are recognized, with a special icon, and basic syntax coloring: https://github.com/apache/netbeans/pull/1428
+ - Files with extension ".md" are recognized, with a special icon, and basic syntax coloring: link:https://github.com/apache/netbeans/pull/1428[https://github.com/apache/netbeans/pull/1428]
 
 === FlatLaf Enhancements
- - Update FlatLaf from 1.0 to 1.1.1 and added "FlatLaf" options: https://github.com/apache/netbeans/pull/2839
- - Fix/improve styling of quicksearch field in menubar: https://github.com/apache/netbeans/pull/2900
- - Update from 1.1.1 to 1.1.2 and fix/improve options: https://github.com/apache/netbeans/pull/2872
+ - Update FlatLaf from 1.0 to 1.1.1 and added "FlatLaf" options: link:https://github.com/apache/netbeans/pull/2839[https://github.com/apache/netbeans/pull/2839]
+ - Fix/improve styling of quicksearch field in menubar: link:https://github.com/apache/netbeans/pull/2900[https://github.com/apache/netbeans/pull/2900]
+ - Update from 1.1.1 to 1.1.2 and fix/improve options: link:https://github.com/apache/netbeans/pull/2872[https://github.com/apache/netbeans/pull/2872]
 
 === Error Notifications 
- - Always display errors as an icon in bottom right corner in development builds: https://github.com/apache/netbeans/pull/2888
+ - Always display errors as an icon in bottom right corner in development builds: link:https://github.com/apache/netbeans/pull/2888[https://github.com/apache/netbeans/pull/2888]
