--- a/netbeans.apache.org/src/content/download/nb90/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.adoc
@@ -99,7 +99,7 @@ image:invalidArray.png[New Error Hint for var Array declaration, title="New Erro
 --
 image:nb90-module-info.png[Adding module-info.java, title="Adding module-info.java", role="left", link="nb90-module-info.png"]
 
-NetBeans 9 supports link:http://openjdk.java.net/projects/jigsaw/spec/[JPMS (Jigsaw)]. 
+NetBeans 9 supports link:https://openjdk.org/projects/jigsaw/spec/[JPMS (Jigsaw)]. 
 
 Modulepath was added as a paradigm to NetBeans in addition to Classpath.
 
@@ -132,7 +132,7 @@ in the project will be compiled at once.
 --
 image:nb90-javashell.png[Java Shell Support, title="Java Shell Support", role="left", link="nb90-javashell.png"]
 
-Java Shell is a new tool included in JDK9 defined in link:http://openjdk.java.net/jeps/222[JEP 222] to introduce REPL
+Java Shell is a new tool included in JDK9 defined in link:https://openjdk.org/jeps/222[JEP 222] to introduce REPL
 (read-eval-print-loop) capabilities to Java. 
 
 NetBeans provides integrated console-like UI for the Java Shell, leveraing NetBeans editor capabilites.
