--- a/netbeans.apache.org/src/content/download/nb90/nb90.adoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.adoc
@@ -67,7 +67,7 @@ Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#
 To build Apache NetBeans (incubating) from source you need:
 
 . Oracle's Java 8 or Open JDK v8.
-. Apache Ant 1.10 or greater (https://ant.apache.org).
+. Apache Ant 1.10 or greater (link:https://ant.apache.org[https://ant.apache.org]).
 
 Once you have everything installed then:
 
