--- a/netbeans.apache.org/src/content/participate/netcat.adoc
+++ b/netbeans.apache.org/src/content/participate/netcat.adoc
@@ -37,7 +37,7 @@ significantly influence the quality of the Apache NetBeans IDE. It is important
 to stress though that the NetCAT program is about quality acceptance and not
 about feature design.
 
-This program is the successor of link:http://wiki.netbeans.org/NetCAT[NetCAT] program, which was formerly run by Oracle Inc.
+This program is the successor of xref:../wiki/NetCAT.adoc[NetCAT] program, which was formerly run by Oracle Inc.
 
 == How can I participate in NetCAT?
 
