--- a/netbeans.apache.org/src/content/participate/submit-pr.adoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.adoc
@@ -65,7 +65,7 @@ xref:build-run-debug-tutorials.adoc[Watch a series of 5 short videos] (2 minutes
 === Bootstrapping (do this once)
 
 Since you don't have write permissions to the GitHub apache mirror, you need to
-fork https://github.com/apache/netbeans in GitHub, this is done using
+fork link:https://github.com/apache/netbeans[https://github.com/apache/netbeans] in GitHub, this is done using
 the "fork" button on the top right of the GitHub page.
 
 You then need to clone the forked repository in your computer.
@@ -118,11 +118,11 @@ You are now ready to start modifying the NetBeans code. Use `git commit` when ap
 
 If you have submitted many different commits it's a good idea to squash them together. See xref:submit-pr.adoc#squash[squashing commits on pull requests] for help on this.
 
-Once your code is ready to review create a *pull request* using the GitHub interface. See https://help.github.com/articles/creating-a-pull-request/ for help.
+Once your code is ready to review create a *pull request* using the GitHub interface. See link:https://help.github.com/articles/creating-a-pull-request/[https://help.github.com/articles/creating-a-pull-request/] for help.
 
 === Be patient
 
-Once your pull request is submitted to Apache NetBeans it will be visible in this address https://github.com/apache/netbeans/pulls.
+Once your pull request is submitted to Apache NetBeans it will be visible in this address link:https://github.com/apache/netbeans/pulls[https://github.com/apache/netbeans/pulls].
 
 The pull request will then be reviewed by the xref:../community/who.adoc[NetBeans Team], once there's time to do so. Please be patient, as this may take some time, depending on other duties and ongoing work.
 
@@ -146,7 +146,7 @@ the robustness on I/O errors.
 
 If the PR is merged into master as-is then all these commits will be in the master too, forever. Therefore, in this example, all three commits should be squashed into one so that only `X` is left.
 
-https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History
+link:https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History[https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History]
 
 After submission (and certainly after someone starts reviewing the PR) you shouldn't touch the PR's history. 
 
@@ -200,13 +200,13 @@ These steps assume you have already forked, cloned and configured your NetBeans 
 [[donating-code]]
 == Donating Code
 
-You may find official information here: https://incubator.apache.org/ip-clearance/
+You may find official information here: link:https://incubator.apache.org/ip-clearance/[https://incubator.apache.org/ip-clearance/]
 
 Donator can use pull request as show above. (squashed for having a better readability of the hash)
 
 In order to accept a donation the Apache NetBeans PMC should do a vote to accept the intention of donation.
 
-PMC will have to setup a form to append the list at https://incubator.apache.org/ip-clearance/ and open an issue to track donation.
+PMC will have to setup a form to append the list at link:https://incubator.apache.org/ip-clearance/[https://incubator.apache.org/ip-clearance/] and open an issue to track donation.
 
 Donator must ensure that the following step are ok (PMC member need to check): 
 
