--- a/netbeans.apache.org/src/content/download/dev/index.adoc
+++ b/netbeans.apache.org/src/content/download/dev/index.adoc
@@ -36,9 +36,9 @@ Please visit link:https://ci-builds.apache.org/job/Netbeans/job/netbeans-linux/[
 
 You can of course build Apache NetBeans from source. To do so:
 
-. Clone the https://github.com/apache/netbeans GitHub repository.
+. Clone the link:https://github.com/apache/netbeans[https://github.com/apache/netbeans] GitHub repository.
 . Install an LTS release of the Java Development Kit.
-. Install Apache Ant 1.10 or greater (https://ant.apache.org/).
+. Install Apache Ant 1.10 or greater (link:https://ant.apache.org/[https://ant.apache.org/]).
 . Set JAVA_HOME and ANT_HOME appropriately or leave them undefined.
 
 Once you're all set, enter the `netbeans` directory:
@@ -50,7 +50,7 @@ Once you're all set, enter the `netbeans` directory:
   ** Extract that zip in a place of your choosing and run `netbeans/bin/netbeans` (or `netbeans/bin/netbeans.exe` on Windows).
   ** Type `ant tryme` to run the Apache NetBeans IDE directly from the build folder rather than the zip for development purposes.
 
-For details, go here: https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment
+For details, go here: link:https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment[https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment]
 
 Now that you have built Apache NetBeans from source you may want to xref:../../participate/submit-pr.adoc[submit a pull request].
 
@@ -58,12 +58,12 @@ Now that you have built Apache NetBeans from source you may want to xref:../../p
 
 This is a list of Apache NetBeans repositories:
 
-- https://github.com/apache/netbeans The main source code repository.
-- https://github.com/apache/netbeans-l10n Translation bundle repository.
-- https://github.com/apache/netbeans-website This website's repository.
-- https://github.com/apache/netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
-- https://github.com/apache/netbeans-tools Tools and facilities in support of the Apache NetBeans project.
-- Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
+- link:https://github.com/apache/netbeans[https://github.com/apache/netbeans] The main source code repository.
+- link:https://github.com/apache/netbeans-l10n[https://github.com/apache/netbeans-l10n] Translation bundle repository.
+- link:https://github.com/apache/netbeans-website[https://github.com/apache/netbeans-website] This website's repository.
+- link:https://github.com/apache/netbeans-website-cleanup[https://github.com/apache/netbeans-website-cleanup] A repository used to clean up existing documentation from pass:[http://netbeans.org]
+- link:https://github.com/apache/netbeans-tools[https://github.com/apache/netbeans-tools] Tools and facilities in support of the Apache NetBeans project.
+- Emilian Bold has converted the previous Mercurial repository (pass:[http://hg.netbeans.org]) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
 
 
 
