--- a/netbeans.apache.org/src/content/download/nb100/nb100.adoc
+++ b/netbeans.apache.org/src/content/download/nb100/nb100.adoc
@@ -67,7 +67,7 @@ video::O8cwpEY1OAQ[youtube, title="The Rough Guide to Apache NetBeans 10"]
 To build Apache NetBeans (incubating) 10.0 from source you need:
 
 . Oracle's Java 8 or Open JDK v8.
-. Apache Ant 1.10 or greater (https://ant.apache.org).
+. Apache Ant 1.10 or greater (link:https://ant.apache.org[https://ant.apache.org]).
 
 Once you have everything installed then:
 
