--- a/netbeans.apache.org/src/content/download/nb110/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb110/index.adoc
@@ -136,7 +136,7 @@ image:switch-autocomplete.png[]
 
 ==== JEP-325: Switch Expressions (Preview)
 
-We now have link:http://openjdk.java.net/jeps/325[JEP-325] support. In order to enable
+We now have link:https://openjdk.org/jeps/325[JEP-325] support. In order to enable
 JEP-325 (and other preview features) follow these instructions:
 
 1. Goto `Project > Properties`
