--- a/netbeans.apache.org/src/content/download/nb110/nb110.adoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.adoc
@@ -76,7 +76,7 @@ Apache NetBeans 11.0 runs on the JDK LTS releases 8 and 11, as well as on JDK 12
 To build Apache NetBeans (incubating) 11.0 from source you need:
 
 . Oracle's Java 8 or Open JDK v8.
-. Apache Ant 1.10 or greater (https://ant.apache.org).
+. Apache Ant 1.10 or greater (link:https://ant.apache.org[https://ant.apache.org]).
 
 Once you have everything installed then:
 
