--- a/netbeans.apache.org/src/content/download/nb111/nb111.adoc
+++ b/netbeans.apache.org/src/content/download/nb111/nb111.adoc
@@ -85,7 +85,7 @@ Apache NetBeans 11.1 runs on JDK LTS releases 8 and 11, as well as on JDK 12, i.
 To build Apache NetBeans 11.1 from source you need:
 
 . Oracle's Java 8 or OpenJDK v8.
-. Apache Ant 1.10 or greater (https://ant.apache.org).
+. Apache Ant 1.10 or greater (link:https://ant.apache.org[https://ant.apache.org]).
 
 Once you have everything installed then:
 
