--- a/netbeans.apache.org/src/content/download/nb112/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.adoc
@@ -44,21 +44,21 @@ xref:nb112.adoc[Download, role="button success"]
 
 The highlights of enhancements in the Java area are focused on support for JDK 13.
 
-- link:https://openjdk.java.net/jeps/354[JEP 354]: Switch Expressions (Preview Feature): 
+- link:https://openjdk.org/jeps/354[JEP 354]: Switch Expressions (Preview Feature): 
 
 [.feature]
 --
 image::jdk13-yield.png[role="left", link="jdk13-yield.png"]
 -- 
 
-- link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview Feature)
+- link:https://openjdk.org/jeps/355[JEP 355]: Text Blocks (Preview Feature)
 
 [.feature]
 --
 image::jdk13-textblock.png[role="left", link="jdk13-textblock.png"]
 --  
 
-TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
+TIP: link:https://openjdk.org/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
 
 Preview features can only be used if the Java compiler's `--enable-preview` flag is set, as shown below for Maven. 
 
