--- a/netbeans.apache.org/src/content/download/nb112/nb112.adoc
+++ b/netbeans.apache.org/src/content/download/nb112/nb112.adoc
@@ -58,7 +58,7 @@ link:https://archive.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source
 link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe.sha512[SHA-512],
 link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe.asc[PGP ASC])
 * link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh[Apache-NetBeans-11.2-bin-linux-x64.sh] (
-link:https://archive.apache.org/dist/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.sha512[SHA-512],
 link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.asc[PGP ASC])
 * link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg[Apache-NetBeans-11.2-bin-macosx.dmg] (
 link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg.sha512[SHA-512],
@@ -84,7 +84,7 @@ Apache NetBeans 11.2 runs on the JDK LTS releases 8 and 11, as well as on JDK 13
 To build Apache NetBeans 11.2 from source you need:
 
 . Oracle's Java 8 or OpenJDK v8.
-. Apache Ant 1.10 or greater (https://ant.apache.org).
+. Apache Ant 1.10 or greater (link:https://ant.apache.org[https://ant.apache.org]).
 
 Once you have everything installed then:
 
