--- a/netbeans.apache.org/src/content/download/nb113/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.adoc
@@ -45,21 +45,21 @@ Below are the highlights of Apache NetBeans 11.3, for a full list, see the link:
 
 The highlights of enhancements in the Java area are focused on support for JDK 14.
 
-- link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
+- link:https://openjdk.org/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
 
 [.feature]
 --
 image::record-keyword.png[role="left", link="record-keyword.png"]
 -- 
 
-- link:https://openjdk.java.net/jeps/305[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
+- link:https://openjdk.org/jeps/305[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
 
 [.feature]
 --
 image::ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"]
 --  
 
-TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
+TIP: link:https://openjdk.org/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
 
 Preview features can only be used if the Java compiler's `--enable-preview` flag is set, as shown below for Maven. 
 
@@ -95,9 +95,9 @@ TIP: To use JDK 14 features, such as the new "record" keyword, in the Java Edito
 
 Other enhancements in the Java area.
 
-- link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
+- link:https://openjdk.org/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
  
-- link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the Text Block features introduced to the Java Editor in previous 11.x releases, a new Java editor hint has been introduced in 11.3 for reverting from Text Block to String. 
+- link:https://openjdk.org/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the Text Block features introduced to the Java Editor in previous 11.x releases, a new Java editor hint has been introduced in 11.3 for reverting from Text Block to String. 
 
 === Java EE
 
