--- a/netbeans.apache.org/src/content/download/nb125/nb125.adoc
+++ b/netbeans.apache.org/src/content/download/nb125/nb125.adoc
@@ -82,7 +82,7 @@ TIP: The current JDKs have an issue on macOS Big Sur, that causes freezes on dia
 To build Apache NetBeans 12.5 from source you need:
 
 . A distribution of OpenJDK 8 or 11.
-. Apache Ant 1.10 or greater (https://ant.apache.org).
+. Apache Ant 1.10 or greater (link:https://ant.apache.org[https://ant.apache.org]).
 
 Once you have everything installed then:
 
