--- a/netbeans.apache.org/src/content/help/commercial-support.adoc
+++ b/netbeans.apache.org/src/content/help/commercial-support.adoc
@@ -38,9 +38,9 @@ Software Foundation.
 
 | Oliver Rettig
 | Java Swing,NetBeans APIs, NetBeans Platform
-| Oliver Rettig is a scientist in the field of motion analysis and a Java developer with a decade of experience in scientific desktop  application development, usually based on Swing and the NetBeans Platform (http://upperlimb.orat.de and  http://www.motion-science.org/). Oliver is available for work through his own company ORAT (http://www.orat.de).
+| Oliver Rettig is a scientist in the field of motion analysis and a Java developer with a decade of experience in scientific desktop  application development, usually based on Swing and the NetBeans Platform (link:http://upperlimb.orat.de[http://upperlimb.orat.de] and  link:http://www.motion-science.org/[http://www.motion-science.org/]). Oliver is available for work through his own company ORAT (link:http://www.orat.de[http://www.orat.de]).
 | Karlsruhe, Germany
-| link:mailto:oliver.rettig@orat.de[oliver.rettig@orat.de], http://www.orat.de
+| link:mailto:oliver.rettig@orat.de[oliver.rettig@orat.de], link:http://www.orat.de[http://www.orat.de]
 
 |====
 
