some fixes and regrouping for c++

--- a/netbeans.apache.org/src/content/blogs/geertjan/index.adoc
+++ b/netbeans.apache.org/src/content/blogs/geertjan/index.adoc
@@ -117,7 +117,7 @@ include::project_level_license_settings.adoc[]
 
 include::serializing_nodes.adoc[]
 
-include::swing_outline_component[]
+include::swing_outline_component.adoc[]
 
 include::thanks_javafx_wysiwyg_html_editor.adoc[]
 
