--- a/netbeans.apache.org/src/content/inc/database.adoc
+++ b/netbeans.apache.org/src/content/inc/database.adoc
@@ -19,3 +19,11 @@
 
 
 :wikipedia: https://en.wikipedia.org/wiki/
+
+// jdk related docs
+
+// jdk dwnld
+:jdkdownload: https://www.oracle.com/java/technologies/downloads/
+
+//jni homepage
+:jnispec: https://docs.oracle.com/en/java/javase/11/docs/specs/jni/index.html
