15 in the archive list

--- a/netbeans.apache.org/src/content/download/archive/index.adoc
+++ b/netbeans.apache.org/src/content/download/archive/index.adoc
@@ -28,6 +28,12 @@
 
 Older Apache NetBeans releases can still be downloaded, but are no longer supported.
 
+== Apache NetBeans 15
+
+Apache NetBeans 15 was released on November 30, 2022.
+
+link:https://github.com/apache/netbeans/releases/tag/15[Features, role="button"] xref:../nb14/index.adoc[Download, role="button success"]
+
 == Apache NetBeans 14
 
 Apache NetBeans 14 was released on June 9, 2022.
