Update NB16 page including Linux packages, and prepare NB15 page for archiving.

--- a/netbeans.apache.org/src/content/download/nb15/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb15/index.adoc
@@ -35,8 +35,8 @@ for important requirements for download pages for Apache projects.
 
 // check version above
 :netbeans-version: 15
-:url-download-keychecksum: https://downloads.apache.org/netbeans/
-:url-download: https://www.apache.org/dyn/closer.cgi/netbeans/
+:url-download-keychecksum: https://archive.apache.org/dist/netbeans/
+:url-download: https://archive.apache.org/dist/netbeans/
 
 //// 
 url-download depends of release status archived or not
