--- a/netbeans.apache.org/src/content/help/commercial-support.adoc
+++ b/netbeans.apache.org/src/content/help/commercial-support.adoc
@@ -36,6 +36,12 @@ Software Foundation.
 |====
 |Applicant Name|Skills|Details|Location|Contact details
 
+| Codelerity Ltd.
+| Apache NetBeans APIs, platform, IDE and packaging; native interop; Java core, desktop and compiler APIs.
+| Codelerity was founded in 2019 by Neil C Smith, and offers software development, consultancy and advice. Neil is a member of the NetBeans PMC and Apache Software Foundation, with over two decades experience of Java development. Codelerity develop a range of NetBeans related tools, and also build and distribute community installers of NetBeans IDE.
+| Oxford / London, UK
+| link:mailto:neil@codelerity.com[neil@codelerity.com], link:https://www.codelerity.com[https://www.codelerity.com]
+
 | Oliver Rettig
 | Java Swing,NetBeans APIs, NetBeans Platform
 | Oliver Rettig is a scientist in the field of motion analysis and a Java developer with a decade of experience in scientific desktop  application development, usually based on Swing and the NetBeans Platform (link:http://upperlimb.orat.de[http://upperlimb.orat.de] and  link:http://www.motion-science.org/[http://www.motion-science.org/]). Oliver is available for work through his own company ORAT (link:http://www.orat.de[http://www.orat.de]).
