--- a/netbeans.apache.org/src/content/download/nb17/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb17/index.adoc
@@ -105,7 +105,7 @@ Foundation. They may include other contents (eg. JDK) under additional license t
 
 == Deployment Platforms
 
-The Apache NetBeans {netbeans-version} binary releases require JDK 11+, and officially support running on JDK 11 and JDK 17.
+The Apache NetBeans {netbeans-version} binary releases require JDK 11+, and officially support running on JDK 11, 17 and 19.
 
 TIP: The Runtime JDK NetBeans uses does not influence the JDK range projects can use.
 
@@ -117,21 +117,11 @@ TIP: The Runtime JDK NetBeans uses does not influence the JDK range projects can
 
 == Building from Source
 
-To build Apache NetBeans {netbeans-version} from source you need:
-
-. A distribution of OpenJDK 11.
-. Apache Ant 1.10 or greater (link:https://ant.apache.org[https://ant.apache.org]).
-
-Once you have everything installed then:
-
 1. Unzip link:{url-download}netbeans/{netbeans-version}/netbeans-{netbeans-version}-source.zip[netbeans-{netbeans-version}-source.zip]
 in a directory of your liking.
 
 [start=2]
-. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
-Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
-
-For more details refer to the README.
+. Follow the build instructions in the README
 
 == Community Approval
 
