--- a/netbeans.apache.org/src/content/download/dev/index.adoc
+++ b/netbeans.apache.org/src/content/download/dev/index.adoc
@@ -37,15 +37,13 @@ Please visit link:https://ci-builds.apache.org/job/Netbeans/job/netbeans-linux/[
 You can of course build Apache NetBeans from source. To do so:
 
 . Clone the link:https://github.com/apache/netbeans[https://github.com/apache/netbeans] GitHub repository.
-. Install an LTS release of the Java Development Kit.
+. Install an LTS release of the Java Development Kit. (JDK 11+)
 . Install Apache Ant 1.10 or greater (link:https://ant.apache.org/[https://ant.apache.org/]).
-. Set JAVA_HOME and ANT_HOME appropriately or leave them undefined.
+. Set or verify that the environment variables JAVA_HOME and ANT_HOME are properly defined.
 
 Once you're all set, enter the `netbeans` directory:
 
-- To build the Apache NetBeans IDE, according to the JDK:
-  ** On JDK 8, type `ant build`
-  ** On JDK 9 or later, type `ant build -Dpermit.jdk9.builds=true`
+- To build the Apache NetBeans IDE, according to the JDK type `ant build` in the command line or shell of your choice
 - The build will generate a binary zip bundle of the IDE at `./nbbuild/NetBeans-<version-hash>-release.zip`, and you can:
   ** Extract that zip in a place of your choosing and run `netbeans/bin/netbeans` (or `netbeans/bin/netbeans.exe` on Windows).
   ** Type `ant tryme` to run the Apache NetBeans IDE directly from the build folder rather than the zip for development purposes.
