Updates for 18 release

--- a/netbeans.apache.org/src/content/download/archive/index.adoc
+++ b/netbeans.apache.org/src/content/download/archive/index.adoc
@@ -28,6 +28,12 @@
 
 Older Apache NetBeans releases can still be downloaded, but are no longer supported.
 
+== Apache NetBeans 17
+
+Apache NetBeans 17 was released on February 21, 2023.
+
+link:https://github.com/apache/netbeans/releases/tag/17[Features, role="button"] xref:../nb16/index.adoc[Download, role="button success"]
+
 == Apache NetBeans 16
 
 Apache NetBeans 16 was released on November 30, 2022.
