Archive Apache NetBeans 17.

--- a/netbeans.apache.org/src/content/download/nb17/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb17/index.adoc
@@ -37,10 +37,8 @@ for important requirements for download pages for Apache projects.
 :netbeans-version: 17
 
 // base URLs - when archiving, delete the next 2 lines and uncomment the following 2
-:url-download: https://www.apache.org/dyn/closer.cgi/netbeans/
-:url-download-keychecksum: https://downloads.apache.org/netbeans/
-// :url-download: https://archive.apache.org/dist/netbeans/
-// :url-download-keychecksum: https://archive.apache.org/dist/netbeans/
+:url-download: https://archive.apache.org/dist/netbeans/
+:url-download-keychecksum: https://archive.apache.org/dist/netbeans/
 
 //// 
 url-download depends of release status archived or not
