asciidoctor build fixes

--- a/netbeans.apache.org/src/content/download/nb123/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.adoc
@@ -41,7 +41,7 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
 
 == Java
 
-==== LSP/VS Code Integration
+=== LSP/VS Code Integration
 
 link:https://marketplace.visualstudio.com/items?itemName=ASF.apache-netbeans-java[Apache NetBeans Language Server] enhancements.
 
@@ -59,13 +59,13 @@ link:https://marketplace.visualstudio.com/items?itemName=ASF.apache-netbeans-jav
  - Don't show reload/save dialogs: I didn't find the appropriate PR and it's a too small detail to mention IMHO
  - Properly stop Maven execution from LSP/DAP: https://github.com/apache/netbeans/pull/2679
 
-==== nb-javac
+=== nb-javac
 
  - Update to (Maven distributed) nbjavac 15.0.0.2: https://github.com/apache/netbeans/pull/2759
  - Fix an issue where permits is treated as a keyword: https://github.com/apache/netbeans/pull/2759
  - Test case for nb-javac for JDK 15: https://github.com/apache/netbeans/pull/2562
 
-==== Gradle
+=== Gradle
  - Favorite tasks can be added to Gradle Navigator: https://github.com/apache/netbeans/pull/2595
  - Improved Gradle Sub-Project display on large projects: https://github.com/apache/netbeans/pull/2629
  - Fix IAE, when using composite Gradle Builds: https://github.com/apache/netbeans/pull/2606
@@ -74,13 +74,13 @@ link:https://marketplace.visualstudio.com/items?itemName=ASF.apache-netbeans-jav
 
 Complete PHP 8.0 syntax is supported, though code completion for attributes and named parameters is not implemented yet.
 
-==== PHP 8.0 Support
+=== PHP 8.0 Support
  - Constructor Property Promotion: https://github.com/apache/netbeans/pull/2674
  - Named Arguments: https://github.com/apache/netbeans/pull/2704
  - Attribute Syntax: https://github.com/apache/netbeans/pull/2640
  - Allow trailing comma in closure use lists: https://github.com/apache/netbeans/pull/2692
 
-==== Enhancements
+=== Enhancements
  - Show and change the PHP Version of project properties on the status bar: https://github.com/apache/netbeans/pull/2681
  - Added PSR-4 hints: https://github.com/apache/netbeans/pull/2630
  - Use complete Composer package name: https://github.com/apache/netbeans/pull/2583
@@ -93,7 +93,7 @@ Complete PHP 8.0 syntax is supported, though code completion for attributes and 
  - Improvements for constants in code completion: https://github.com/apache/netbeans/pull/2536 and https://github.com/apache/netbeans/pull/2578
  - Remove consecutive empty lines when formatting PHP code: https://github.com/apache/netbeans/pull/2573
 
-==== Fixes
+=== Fixes
  - Shared settings for PHP code generators: https://github.com/apache/netbeans/pull/2691
  - Fix code completion for traits of use and group use statements: https://github.com/apache/netbeans/pull/2533
  - Fix anonymous function formatting: https://github.com/apache/netbeans/pull/2614
